Fix for Wazuh 4.8.0
Added compatibility for Wazuh 4.8.0 +

--- a/.env.example
+++ b/.env.example
@@ -26,19 +26,19 @@
 # =====================================================
 
 # -----------------------------------------------------
-# WAZUH CONFIGURATION (Required)
+# WAZUH SERVER API CONFIGURATION (Required)
 # -----------------------------------------------------
-# Your Wazuh manager connection details
+# Your Wazuh manager connection details for Server API
 # Find these in your Wazuh deployment configuration
 
-# Wazuh API endpoint host (IP or domain)
+# Wazuh Server API endpoint host (IP or domain)
 # Examples: 192.168.1.100, wazuh.company.com, localhost
 WAZUH_HOST=localhost
 
-# Wazuh API port (default: 55000)
+# Wazuh Server API port (default: 55000)
 WAZUH_PORT=55000
 
-# Wazuh API credentials
+# Wazuh Server API credentials
 # Create a dedicated API user with minimal required permissions
 # DO NOT use the default admin account in production
 WAZUH_USER=admin
@@ -51,6 +51,40 @@ VERIFY_SSL=false
 # Wazuh API version (default: v4)
 # Check your Wazuh version: GET https://your-wazuh:55000/
 WAZUH_API_VERSION=v4
+
+# -----------------------------------------------------
+# WAZUH INDEXER API CONFIGURATION (Required for 4.8.0+)
+# -----------------------------------------------------
+# Wazuh Indexer (OpenSearch/Elasticsearch) settings
+# Required for alerts and vulnerabilities in Wazuh 4.8.0+
+
+# Wazuh Indexer host (can be same as WAZUH_HOST)
+# If not set, will use WAZUH_HOST as fallback
+WAZUH_INDEXER_HOST=localhost
+
+# Wazuh Indexer port (default: 9200)
+WAZUH_INDEXER_PORT=9200
+
+# Wazuh Indexer credentials (often same as dashboard login)
+# If not set, will use WAZUH_USER/WAZUH_PASS as fallback
+WAZUH_INDEXER_USER=admin
+WAZUH_INDEXER_PASS=admin
+
+# Indexer SSL verification (inherits from VERIFY_SSL if not set)
+WAZUH_INDEXER_VERIFY_SSL=false
+
+# -----------------------------------------------------
+# WAZUH VERSION & API BEHAVIOR
+# -----------------------------------------------------
+# Wazuh version (auto-detected if not set)
+# Examples: 4.7.2, 4.8.0, 4.9.0
+# WAZUH_VERSION=4.8.0
+
+# Use Indexer API for alerts (default: true for 4.8.0+)
+USE_INDEXER_FOR_ALERTS=true
+
+# Use Indexer API for vulnerabilities (default: true for 4.8.0+)
+USE_INDEXER_FOR_VULNERABILITIES=true
 
 # -----------------------------------------------------
 # EXTERNAL API KEYS (Optional but Recommended)
