Fixes need Testing
Tests in Progress ! dont deploy. For test only

--- a/.env.example
+++ b/.env.example
@@ -44,9 +44,27 @@ WAZUH_PORT=55000
 WAZUH_USER=admin
 WAZUH_PASS=admin
 
-# SSL/TLS verification (set to true in production)
-# Only set to false for development/testing with self-signed certificates
+# SSL/TLS verification - DEFAULTS TO FALSE FOR EASY SETUP
+# ⚡ Quick Start: Leave as 'false' for immediate compatibility with any certificate type
+# 🔒 Production: Set to 'true' only if you have commercial/CA-signed certificates
+# ✅ Works with: Self-signed, internal CA, commercial, and development certificates
 VERIFY_SSL=false
+
+# Advanced SSL/TLS Configuration (Optional)
+# Custom CA bundle path for certificate verification
+# WAZUH_CA_BUNDLE_PATH=/path/to/ca-bundle.pem
+
+# Client certificate authentication (Optional)
+# WAZUH_CLIENT_CERT_PATH=/path/to/client.crt
+# WAZUH_CLIENT_KEY_PATH=/path/to/client.key
+
+# Allow self-signed certificates - ENABLED BY DEFAULT
+# ✅ Recommended: Leave as 'true' for maximum compatibility
+# 🚀 This allows connection to ANY Wazuh installation regardless of certificate type
+WAZUH_ALLOW_SELF_SIGNED=true
+
+# SSL connection timeout in seconds
+# WAZUH_SSL_TIMEOUT=30
 
 # Wazuh API version (default: v4)
 # Check your Wazuh version: GET https://your-wazuh:55000/
@@ -70,8 +88,23 @@ WAZUH_INDEXER_PORT=9200
 WAZUH_INDEXER_USER=admin
 WAZUH_INDEXER_PASS=admin
 
-# Indexer SSL verification (inherits from VERIFY_SSL if not set)
+# Indexer SSL verification - DEFAULTS TO FALSE FOR EASY SETUP
+# ⚡ Quick Start: Leave as 'false' for immediate compatibility
+# 📝 Note: Inherits from VERIFY_SSL if not set
 WAZUH_INDEXER_VERIFY_SSL=false
+
+# Advanced SSL/TLS Configuration for Indexer (Optional)
+# Custom CA bundle path for indexer certificate verification
+# WAZUH_INDEXER_CA_BUNDLE_PATH=/path/to/indexer-ca-bundle.pem
+
+# Client certificate authentication for indexer (Optional)
+# WAZUH_INDEXER_CLIENT_CERT_PATH=/path/to/indexer-client.crt
+# WAZUH_INDEXER_CLIENT_KEY_PATH=/path/to/indexer-client.key
+
+# Allow self-signed certificates for indexer - ENABLED BY DEFAULT  
+# ✅ Recommended: Leave as 'true' for maximum compatibility
+# 🚀 This allows connection to ANY Wazuh Indexer regardless of certificate type
+WAZUH_INDEXER_ALLOW_SELF_SIGNED=true
 
 # -----------------------------------------------------
 # WAZUH VERSION & API BEHAVIOR
@@ -230,10 +263,17 @@ ENABLE_EXPERIMENTAL=false
 #
 # 4. Security Checklist:
 #    [ ] Changed default passwords
-#    [ ] Enabled SSL verification (production)
+#    [ ] SSL configured (verification disabled by default for compatibility)
 #    [ ] Set appropriate file permissions
 #    [ ] Using dedicated API user (not admin)
 #    [ ] API keys are kept secret
 #    [ ] Regular credential rotation planned
+#
+# 5. SSL Configuration Notes:
+#    ✅ By default, SSL verification is DISABLED for maximum compatibility
+#    ✅ Self-signed certificates are ALLOWED by default
+#    🚀 This means the MCP server will work with ANY Wazuh installation
+#    🔒 For production: Enable SSL verification only if you have proper certificates
+#    📝 No certificate configuration needed for most installations
 #
 # =====================================================
