--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,17 @@
-# =====================================================
-# Wazuh MCP Server Environment Configuration
+# Wazuh MCP Server - Environment Configuration Template
 # =====================================================
 # 
-# IMPORTANT: Security Instructions
-# --------------------------------
-# 1. Copy this file to create your local configuration:
-#    Linux/Mac: cp .env.example .env
-#    Windows:   copy .env.example .env
+# Setup Instructions:
+# 1. Copy this file: cp .env.example .env (Linux/Mac) or copy .env.example .env (Windows)
+# 2. Replace placeholder values with your actual configuration
+# 3. Secure the file: chmod 600 .env (Linux/Mac)
+# 4. Never commit .env files to version control
 #
-# 2. NEVER commit .env file to Git!
-#    - .env is already in .gitignore
-#    - .env.example is safe to commit (contains no secrets)
-#    - Check: git status (should not show .env)
-#
-# 3. Keep your .env file secure:
-#    - Set file permissions: chmod 600 .env (Linux/Mac)
-#    - Don't share or expose your credentials
-#    - Use different credentials for dev/staging/prod
-#
-# 4. For production:
-#    - Use strong passwords
-#    - Enable SSL verification
-#    - Rotate credentials regularly
-#    - Consider using secrets management tools
+# Production Security:
+# - Use strong, unique passwords
+# - Enable SSL verification for all connections
+# - Implement regular credential rotation
+# - Consider using enterprise secrets management systems
 # =====================================================
 
 # -----------------------------------------------------
@@ -39,16 +28,18 @@ WAZUH_HOST=localhost
 WAZUH_PORT=55000
 
 # Wazuh Server API credentials
-# Create a dedicated API user with minimal required permissions
+# Create a dedicated API user with minimal required permissions  
 # DO NOT use the default admin account in production
-WAZUH_USER=admin
-WAZUH_PASS=admin
+# REQUIRED: Replace with your actual Wazuh credentials
+WAZUH_USER=your-wazuh-username
+WAZUH_PASS=your-secure-password
 
-# SSL/TLS verification - DEFAULTS TO FALSE FOR EASY SETUP
-# ⚡ Quick Start: Leave as 'false' for immediate compatibility with any certificate type
-# 🔒 Production: Set to 'true' only if you have commercial/CA-signed certificates
-# ✅ Works with: Self-signed, internal CA, commercial, and development certificates
-VERIFY_SSL=false
+# SSL/TLS verification - SECURE BY DEFAULT
+# 🔒 Security: Defaults to 'true' for production security (validates certificates)
+# ✅ Works with: Commercial CA-signed certificates, internal CA certificates
+# ⚠️  Development: Set to 'false' only for development with self-signed certificates
+# 📋 Note: Use WAZUH_ALLOW_SELF_SIGNED=true for self-signed certificates with verification
+VERIFY_SSL=true
 
 # Advanced SSL/TLS Configuration (Optional)
 # Custom CA bundle path for certificate verification
@@ -85,13 +76,14 @@ WAZUH_INDEXER_PORT=9200
 
 # Wazuh Indexer credentials (often same as dashboard login)
 # If not set, will use WAZUH_USER/WAZUH_PASS as fallback
-WAZUH_INDEXER_USER=admin
-WAZUH_INDEXER_PASS=admin
+# REQUIRED: Replace with your actual Wazuh Indexer credentials
+WAZUH_INDEXER_USER=your-indexer-username
+WAZUH_INDEXER_PASS=your-indexer-password
 
-# Indexer SSL verification - DEFAULTS TO FALSE FOR EASY SETUP
-# ⚡ Quick Start: Leave as 'false' for immediate compatibility
-# 📝 Note: Inherits from VERIFY_SSL if not set
-WAZUH_INDEXER_VERIFY_SSL=false
+# Indexer SSL verification - SECURE BY DEFAULT
+# 🔒 Security: Inherits from VERIFY_SSL if not set (recommended)
+# ⚠️  Development: Set to 'false' only for development environments
+# WAZUH_INDEXER_VERIFY_SSL=true
 
 # Advanced SSL/TLS Configuration for Indexer (Optional)
 # Custom CA bundle path for indexer certificate verification
