--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,6 @@ on:
 
 env:
   PYTHON_VERSION: '3.9'
-  NODE_VERSION: '18'
 
 jobs:
   # ================================================================
@@ -115,7 +114,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
     
     steps:
       - uses: actions/checkout@v4
@@ -130,6 +129,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest pytest-cov pytest-asyncio pytest-mock
           pip install -r requirements.txt
+      
+      - name: Run cross-platform setup
+        run: |
+          python setup.py
       
       - name: Run tests with coverage
         run: |
