--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-# Byte-compiled / optimized / DLL files
+# .gitignore for Wazuh MCP Server
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -20,86 +18,54 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
 
 # Virtual environments
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.production
+.env.test
+.venv
+venv/
+ENV/
 
-# IDEs
-.vscode/
+# IDE
 .idea/
+.vscode/
 *.swp
 *.swo
-*~
 
-# OS generated files
+# OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Logs
 *.log
 logs/
 
-# Temporary files
+# Docker
+docker-compose.override.yml
+
+# Production data
+data/
+letsencrypt/
+prometheus-data/
+grafana-data/
+redis-data/
+
+# SSL certificates
+*.pem
+*.crt
+*.key
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+
+# Temporary
 *.tmp
-*.temp
 temp/
-tmp/
 
-# Test files (temporary)
-test_*.py
-!tests/test_*.py
-
-# Analysis files
-analysis.txt
-changelog.txt
-
-# Backup files
-*_old.py
-*_backup.py
-*.bak
