--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,148 +1,197 @@
 version: '3.8'
 
 services:
-  wazuh-mcp-server:
-    build: .
-    container_name: wazuh-mcp-server
+  # Wazuh MCP Server - HTTP Transport
+  wazuh-mcp-http:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: wazuh-mcp-http
     restart: unless-stopped
-    
-    # Environment variables - uses .env file if it exists
     environment:
-      # Wazuh Configuration
-      - WAZUH_HOST=${WAZUH_HOST:-localhost}
-      - WAZUH_PORT=${WAZUH_PORT:-55000}
-      - WAZUH_USER=${WAZUH_USER:-admin}
-      - WAZUH_PASS=${WAZUH_PASS:-admin}
-      - VERIFY_SSL=${VERIFY_SSL:-false}
-      - WAZUH_API_VERSION=${WAZUH_API_VERSION:-v4}
+      # Wazuh Server Configuration
+      WAZUH_HOST: ${WAZUH_HOST:-wazuh-manager}
+      WAZUH_PORT: ${WAZUH_PORT:-55000}
+      WAZUH_USER: ${WAZUH_USER:-wazuh}
+      WAZUH_PASS: ${WAZUH_PASS:-wazuh}
+      VERIFY_SSL: ${VERIFY_SSL:-false}
       
-      # External API Keys
-      - VIRUSTOTAL_API_KEY=${VIRUSTOTAL_API_KEY:-}
-      - SHODAN_API_KEY=${SHODAN_API_KEY:-}
-      - ABUSEIPDB_API_KEY=${ABUSEIPDB_API_KEY:-}
+      # Wazuh Indexer Configuration (optional)
+      WAZUH_INDEXER_HOST: ${WAZUH_INDEXER_HOST}
+      WAZUH_INDEXER_PORT: ${WAZUH_INDEXER_PORT:-9200}
+      WAZUH_INDEXER_USER: ${WAZUH_INDEXER_USER}
+      WAZUH_INDEXER_PASS: ${WAZUH_INDEXER_PASS}
       
       # Server Configuration
-      - DEBUG=${DEBUG:-false}
-      - MCP_SERVER_PORT=${MCP_SERVER_PORT:-8000}
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      DEBUG: ${DEBUG:-false}
       
-      # Performance Settings
-      - MAX_ALERTS_PER_QUERY=${MAX_ALERTS_PER_QUERY:-1000}
-      - MAX_AGENTS_PER_SCAN=${MAX_AGENTS_PER_SCAN:-10}
-      - CACHE_TTL_SECONDS=${CACHE_TTL_SECONDS:-300}
-      - REQUEST_TIMEOUT_SECONDS=${REQUEST_TIMEOUT_SECONDS:-30}
-      
-      # Feature Flags
-      - ENABLE_EXTERNAL_INTEL=${ENABLE_EXTERNAL_INTEL:-true}
-      - ENABLE_ML_ANALYSIS=${ENABLE_ML_ANALYSIS:-true}
-      - ENABLE_COMPLIANCE_CHECKING=${ENABLE_COMPLIANCE_CHECKING:-true}
-      
-      # Python Configuration
-      - PYTHONUNBUFFERED=1
-      - PYTHONDONTWRITEBYTECODE=1
-    
-    # Volumes
+      # External API Keys (optional)
+      VIRUSTOTAL_API_KEY: ${VIRUSTOTAL_API_KEY}
+      SHODAN_API_KEY: ${SHODAN_API_KEY}
+      ABUSEIPDB_API_KEY: ${ABUSEIPDB_API_KEY}
+    ports:
+      - "8000:8000"
+    command: ["python", "wazuh_mcp_server.py", "--http", "--host", "0.0.0.0", "--port", "8000"]
     volumes:
-      # Logs directory
       - ./logs:/app/logs
-      
-      # Data directory for cache/temp files
       - ./data:/app/data
-      
-      # Mount .env file if you prefer file-based config (optional)
-      # - ./.env:/app/.env:ro
-      
-      # For development: mount source code
-      # - ./src:/app/src:ro
-    
-    # Networks
     networks:
-      - mcp-network
-    
-    # Logging configuration
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-        labels: "service=wazuh-mcp"
-    
-    # Health check (using application-specific health check)
-    healthcheck:
-      test: ["CMD", "python", "/app/src/health_check.py"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    
-    # Resource limits
-    deploy:
-      resources:
-        limits:
-          cpus: '2'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 256M
-    
-    # Security options
-    security_opt:
-      - no-new-privileges:true
-    
-    # Read-only root filesystem for security
-    read_only: true
-    
-    # Temp directories for writable areas
-    tmpfs:
-      - /tmp
-      - /app/.cache
+      - wazuh-mcp-network
+    depends_on:
+      - traefik
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.wazuh-mcp-http.rule=Host(`mcp-http.${DOMAIN:-localhost}`)"
+      - "traefik.http.routers.wazuh-mcp-http.entrypoints=websecure"
+      - "traefik.http.routers.wazuh-mcp-http.tls.certresolver=letsencrypt"
+      - "traefik.http.services.wazuh-mcp-http.loadbalancer.server.port=8000"
 
-  # Optional: Add a init container to create .env if missing
-  init-env:
-    image: busybox:latest
-    container_name: wazuh-mcp-init
-    command: |
-      sh -c '
-        if [ ! -f /config/.env ]; then
-          echo "Creating .env from .env.example..."
-          cp /config/.env.example /config/.env 2>/dev/null || {
-            echo "Creating default .env file..."
-            cat > /config/.env << EOF
-      # Wazuh Configuration
-      WAZUH_HOST=localhost
-      WAZUH_PORT=55000
-      WAZUH_USER=admin
-      WAZUH_PASS=admin
-      VERIFY_SSL=false
+  # Wazuh MCP Server - WebSocket Transport
+  wazuh-mcp-ws:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: wazuh-mcp-ws
+    restart: unless-stopped
+    environment:
+      # Wazuh Server Configuration
+      WAZUH_HOST: ${WAZUH_HOST:-wazuh-manager}
+      WAZUH_PORT: ${WAZUH_PORT:-55000}
+      WAZUH_USER: ${WAZUH_USER:-wazuh}
+      WAZUH_PASS: ${WAZUH_PASS:-wazuh}
+      VERIFY_SSL: ${VERIFY_SSL:-false}
       
-      # External API Keys (Optional)
-      VIRUSTOTAL_API_KEY=
-      SHODAN_API_KEY=
-      ABUSEIPDB_API_KEY=
+      # Wazuh Indexer Configuration (optional)
+      WAZUH_INDEXER_HOST: ${WAZUH_INDEXER_HOST}
+      WAZUH_INDEXER_PORT: ${WAZUH_INDEXER_PORT:-9200}
+      WAZUH_INDEXER_USER: ${WAZUH_INDEXER_USER}
+      WAZUH_INDEXER_PASS: ${WAZUH_INDEXER_PASS}
       
       # Server Configuration
-      DEBUG=false
-      EOF
-          }
-          echo "IMPORTANT: Edit .env with your Wazuh credentials!"
-        else
-          echo ".env file already exists"
-        fi
-      '
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      DEBUG: ${DEBUG:-false}
+      
+      # External API Keys (optional)
+      VIRUSTOTAL_API_KEY: ${VIRUSTOTAL_API_KEY}
+      SHODAN_API_KEY: ${SHODAN_API_KEY}
+      ABUSEIPDB_API_KEY: ${ABUSEIPDB_API_KEY}
+    ports:
+      - "8001:8001"
+    command: ["python", "wazuh_mcp_server.py", "--ws", "--host", "0.0.0.0", "--port", "8001"]
     volumes:
-      - .:/config
+      - ./logs:/app/logs
+      - ./data:/app/data
     networks:
-      - mcp-network
+      - wazuh-mcp-network
+    depends_on:
+      - traefik
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.wazuh-mcp-ws.rule=Host(`mcp-ws.${DOMAIN:-localhost}`)"
+      - "traefik.http.routers.wazuh-mcp-ws.entrypoints=websecure"
+      - "traefik.http.routers.wazuh-mcp-ws.tls.certresolver=letsencrypt"
+      - "traefik.http.services.wazuh-mcp-ws.loadbalancer.server.port=8001"
+
+  # Reverse Proxy with SSL Termination
+  traefik:
+    image: traefik:v3.0
+    container_name: wazuh-mcp-traefik
+    restart: unless-stopped
+    command:
+      - "--api.dashboard=true"
+      - "--api.debug=true"
+      - "--log.level=INFO"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.letsencrypt.acme.httpchallenge=true"
+      - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.letsencrypt.acme.email=${ACME_EMAIL:-admin@example.com}"
+      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
+      - "--global.checkNewVersion=false"
+      - "--global.sendAnonymousUsage=false"
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8080:8080"  # Traefik dashboard
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "./letsencrypt:/letsencrypt"
+    networks:
+      - wazuh-mcp-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=Host(`traefik.${DOMAIN:-localhost}`)"
+      - "traefik.http.routers.traefik.entrypoints=websecure"
+      - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.traefik.service=api@internal"
+
+  # Redis for session management and rate limiting
+  redis:
+    image: redis:7-alpine
+    container_name: wazuh-mcp-redis
+    restart: unless-stopped
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-wazuh-mcp-redis}
+    volumes:
+      - redis-data:/data
+    networks:
+      - wazuh-mcp-network
+    ports:
+      - "6379:6379"
+
+  # Monitoring with Prometheus
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: wazuh-mcp-prometheus
+    restart: unless-stopped
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
+    networks:
+      - wazuh-mcp-network
+    ports:
+      - "9090:9090"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.prometheus.rule=Host(`prometheus.${DOMAIN:-localhost}`)"
+      - "traefik.http.routers.prometheus.entrypoints=websecure"
+      - "traefik.http.routers.prometheus.tls.certresolver=letsencrypt"
+
+  # Grafana for monitoring dashboards
+  grafana:
+    image: grafana/grafana:latest
+    container_name: wazuh-mcp-grafana
+    restart: unless-stopped
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD:-admin}
+      GF_USERS_ALLOW_SIGN_UP: 'false'
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
+    networks:
+      - wazuh-mcp-network
+    ports:
+      - "3000:3000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.grafana.rule=Host(`grafana.${DOMAIN:-localhost}`)"
+      - "traefik.http.routers.grafana.entrypoints=websecure"
+      - "traefik.http.routers.grafana.tls.certresolver=letsencrypt"
 
 networks:
-  mcp-network:
+  wazuh-mcp-network:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
 
-# Optional: Volume definitions for persistence
 volumes:
-  logs:
-    driver: local
-  data:
-    driver: local
+  redis-data:
+  prometheus-data:
+  grafana-data:
