--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+# Core MCP and async dependencies
 mcp>=0.9.0
 aiohttp>=3.9.0
+aiohttp-cors>=0.7.0
+websockets>=11.0.0
 urllib3>=2.0.0
+
+# Authentication and security
+pyjwt>=2.8.0
+certifi>=2023.5.7
+
+# Utilities and data handling
 python-dateutil>=2.8.2
 python-dotenv>=1.0.0
 pydantic>=2.0.0
 packaging>=21.0
+
+# System monitoring
 psutil>=5.9.0
-certifi>=2023.5.7
