--- a/.env.production.example
+++ b/.env.production.example
@@ -22,8 +22,20 @@ WAZUH_INDEXER_VERIFY_SSL=true
 # =============================================================================
 # REMOTE SERVER CONFIGURATION
 # =============================================================================
+# For FQDN-based deployment with SSL
 DOMAIN=your-domain.com
 ACME_EMAIL=admin@your-domain.com
+
+# SSL/TLS Configuration Options
+# For FQDN deployment: websecure (HTTPS), letsencrypt
+# For IP deployment: web (HTTP), none
+TRAEFIK_ENTRYPOINT=websecure
+TLS_RESOLVER=letsencrypt
+
+# Alternative: IP-based deployment (no SSL)
+# TRAEFIK_ENTRYPOINT=web
+# TLS_RESOLVER=none
+# DOMAIN=192.168.1.100  # Set to your server IP
 
 # Server Settings
 LOG_LEVEL=INFO
