--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ WAZUH_PASS=your-secure-password
 # ✅ Works with: Commercial CA-signed certificates, internal CA certificates
 # ⚠️  Development: Set to 'false' only for development with self-signed certificates
 # 📋 Note: Use WAZUH_ALLOW_SELF_SIGNED=true for self-signed certificates with verification
+# 🔄 CHANGED: Now defaults to 'true' for enhanced security
 VERIFY_SSL=true
 
 # Advanced SSL/TLS Configuration (Optional)
@@ -142,9 +143,6 @@ ABUSEIPDB_API_KEY=
 # Debug mode (set to false in production)
 # Enables verbose logging to stderr
 DEBUG=false
-
-# MCP server port (for future use)
-MCP_SERVER_PORT=8000
 
 # Logging level (DEBUG, INFO, WARNING, ERROR)
 LOG_LEVEL=INFO
@@ -262,10 +260,10 @@ ENABLE_EXPERIMENTAL=false
 #    [ ] Regular credential rotation planned
 #
 # 5. SSL Configuration Notes:
-#    ✅ By default, SSL verification is DISABLED for maximum compatibility
+#    🔒 By default, SSL verification is ENABLED for security (CHANGED)
 #    ✅ Self-signed certificates are ALLOWED by default
 #    🚀 This means the MCP server will work with ANY Wazuh installation
-#    🔒 For production: Enable SSL verification only if you have proper certificates
-#    📝 No certificate configuration needed for most installations
+#    ⚠️  For development: Disable SSL verification if using invalid certificates
+#    📝 Use proper CA-signed certificates for production
 #
 # =====================================================
