--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "wazuh-mcp-server"
 version = "1.1.0"
-description = "Production-grade Model Context Protocol server for Wazuh security platform"
+description = "Production-grade Model Context Protocol server for Wazuh security platform using stdio transport"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
@@ -32,10 +32,9 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "mcp>=0.9.0",
+    "mcp>=1.10.1",
     "aiohttp>=3.9.0",
     "aiohttp-cors>=0.7.0",
-    "websockets>=11.0.0",
     "pyjwt>=2.8.0",
     "urllib3>=2.0.0",
     "python-dateutil>=2.8.2",
