--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,16 +33,14 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "mcp>=1.10.1",
-    "aiohttp>=3.9.0",
-    "aiohttp-cors>=0.7.0",
+    "aiohttp>=3.8.0,<4.0.0",
+    "urllib3>=1.26.0,<3.0.0",
     "pyjwt>=2.8.0",
-    "urllib3>=2.0.0",
+    "certifi>=2021.0.0",
     "python-dateutil>=2.8.2",
-    "python-dotenv>=1.0.0",
+    "python-dotenv>=0.19.0,<2.0.0",
     "pydantic>=1.10.0,<3.0.0",
     "packaging>=21.0",
-    "psutil>=5.9.0",
-    "certifi>=2023.5.7",
 ]
 
 [project.optional-dependencies]
