--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,189 @@
-# Core MCP and async dependencies
-mcp>=1.10.1
-aiohttp>=3.9.0
-aiohttp-cors>=0.7.0
-urllib3>=2.0.0
-
-# Authentication and security
-pyjwt>=2.8.0
-certifi>=2023.5.7
-
-# Utilities and data handling
-python-dateutil>=2.8.2
-python-dotenv>=1.0.0
-pydantic>=1.10.0,<3.0.0
-packaging>=21.0
-
-# System monitoring
-psutil>=5.9.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiohttp-cors==0.8.1
+aiosignal==1.4.0
+alabaster==1.0.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+Authlib==1.6.1
+babel==2.17.0
+bandit==1.8.6
+black==25.1.0
+blinker==1.9.0
+boolean.py==5.0
+build==1.2.2.post1
+CacheControl==0.14.3
+cachetools==6.1.0
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+coverage==7.10.1
+cryptography==45.0.5
+cyclonedx-python-lib==9.1.0
+cyclopts==3.22.3
+defusedxml==0.7.1
+distro==1.9.0
+dnspython==2.7.0
+docstring_parser==0.17.0
+docutils==0.21.2
+dparse==0.6.4
+email_validator==2.2.0
+exceptiongroup==1.3.0
+fastapi==0.116.1
+# fastmcp==2.10.6
+filelock==3.16.1
+flake8==7.3.0
+frozenlist==1.7.0
+gitdb==4.0.12
+GitPython==3.1.45
+greenlet==3.2.3
+h11==0.16.0
+htbuilder==0.9.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.1
+id==1.5.0
+idna==3.10
+imagesize==1.4.1
+iniconfig==2.1.0
+isort==6.0.1
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.2.1
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+keyring==25.6.0
+langchain==0.3.27
+langchain-core==0.3.72
+langchain-ollama==0.3.6
+langchain-text-splitters==0.3.9
+langsmith==0.4.8
+license-expression==30.4.4
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==4.0.0
+mccabe==0.7.0
+mcp==1.12.0
+mdurl==0.1.2
+memory-profiler==0.61.0
+more-itertools==10.7.0
+msgpack==1.1.1
+multidict==6.6.3
+mypy==1.17.0
+mypy_extensions==1.1.0
+narwhals==2.0.1
+nest-asyncio==1.6.0
+nh3==0.3.0
+nltk==3.9.1
+numpy==2.3.2
+ollama==0.5.1
+openai==1.98.0
+openapi-pydantic==0.5.1
+orjson==3.11.1
+packageurl-python==0.17.1
+packaging==25.0
+pandas==2.3.1
+pathspec==0.12.1
+pbr==6.1.1
+pillow==11.3.0
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.9.0
+platformdirs==4.3.8
+pluggy==1.6.0
+propcache==0.3.2
+protobuf==6.31.1
+psutil==6.1.1
+py-cpuinfo==9.0.0
+py-serializable==2.1.0
+pyarrow==21.0.0
+pycodestyle==2.14.0
+pycparser==2.22
+pydantic==2.9.0
+# pydantic==2.11.7
+# pydantic-settings==2.10.1
+pydantic_core
+pydeck==0.9.1
+pyflakes==3.4.0
+Pygments==2.19.2
+PyJWT==2.10.1
+pyparsing==3.2.3
+pyperclip==1.9.0
+pyproject_hooks==1.2.0
+pytest==8.4.1
+pytest-asyncio==1.1.0
+pytest-benchmark==5.1.0
+pytest-cov==6.2.1
+pytest-mock==3.14.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+pytz==2025.2
+pywin32==311
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+readme_renderer==44.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==14.1.0
+rich-rst==1.3.1
+roman-numerals-py==3.1.0
+rpds-py==0.26.0
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+safety==3.6.0
+safety-schemas==0.0.14
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+snowballstemmer==3.0.1
+sortedcontainers==2.4.0
+Sphinx==8.2.3
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+SQLAlchemy==2.0.41
+sse-starlette==2.4.1
+st-annotated-text==4.0.2
+starlette==0.47.2
+stevedore==5.4.1
+streamlit==1.47.1
+tenacity==9.1.2
+toml==0.10.2
+tomlkit==0.13.3
+tornado==6.5.1
+tqdm==4.67.1
+twine==6.1.0
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+uv==0.8.3
+uvicorn==0.35.0
+watchdog==6.0.0
+-e git+https://github.com/gensecaihq/Wazuh-MCP-Server.git@4d8ea2480722ce2cb8f2172730f0190a58212e76#egg=wazuh_mcp_server
+websockets==15.0.1
+wheel==0.45.1
+yarl==1.20.1
+zstandard==0.23.0
+streamlit
