This commit contains updated requirement file and client file path updated in src/client/wazuh_client.py

--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -4,32 +4,32 @@
 # for stability and security in production environments.
 
 # Core MCP and Async Framework
-mcp>=1.10.1                    # MCP protocol implementation
-aiohttp>=3.8.0,<4.0.0        # Async HTTP client with security updates
+mcp==1.12.0                    # MCP protocol implementation
+aiohttp==3.12.14        # Async HTTP client with security updates
 
 # Data Validation and Configuration
-pydantic>=1.10.0,<3.0.0      # Data validation and settings
-python-dotenv>=0.19.0,<2.0.0 # Environment variable loading
+pydantic==2.11.7      # Data validation and settings
+python-dotenv==1.1.1  # Environment variable loading
 
 # HTTP and SSL
-urllib3>=1.26.0,<3.0.0       # HTTP client library with security patches
-certifi>=2021.0.0            # SSL certificate bundle
-requests>=2.28.0,<3.0.0      # HTTP library for external APIs
+urllib3==2.5.0       # HTTP client library with security patches
+certifi==2025.7.14            # SSL certificate bundle
+requests==2.32.4      # HTTP library for external APIs
 
 # System Monitoring and Performance
-psutil>=5.8.0,<6.0.0         # System and process monitoring
+psutil==6.1.1         # System and process monitoring
 
 # Logging and Error Handling
 structlog>=22.0.0,<24.0.0    # Structured logging
 sentry-sdk>=1.0.0,<2.0.0     # Error tracking and monitoring
 
 # Security and Cryptography
-cryptography>=3.4.8          # Cryptographic operations
+cryptography==45.0.5          # Cryptographic operations
 bcrypt>=3.2.0,<5.0.0         # Password hashing
 
 # Production Utilities
-click>=8.0.0,<9.0.0          # CLI framework
-rich>=12.0.0,<14.0.0         # Rich text and progress in terminal
+click==8.2.1          # CLI framework
+rich==14.1.0         # Rich text and progress in terminal
 python-json-logger>=2.0.0    # JSON logging formatter
 
 # Optional: Performance and Monitoring
