--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,29 +1,29 @@
 # Development dependencies
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-pytest-cov>=4.0.0
-pytest-mock>=3.10.0
-pytest-benchmark>=4.0.0
+pytest==8.4.1
+pytest-asyncio==1.1.0
+pytest-cov==6.2.1
+pytest-mock==3.14.1
+pytest-benchmark==5.1.0
 
 # Code quality
-black>=23.0.0
-isort>=5.12.0
-flake8>=6.0.0
-mypy>=1.5.0
+black==25.1.0
+isort==6.0.1
+flake8==7.3.0
+mypy==1.7.0
 
 # Security
-bandit>=1.7.5
-safety>=2.3.0
-pip-audit>=2.6.0
+bandit==1.8.6
+safety==3.6.0
+pip-audit==2.9.0
 
 # Performance monitoring
-memory-profiler>=0.61.0
+memory-profiler==0.61.0
 
 # Documentation
-sphinx>=7.0.0
-sphinx-rtd-theme>=1.3.0
+sphinx==8.2.3
+sphinx-rtd-theme==3.0.2
 
 # Packaging
-build>=0.10.0
-wheel>=0.41.0
-twine>=4.0.0
+build==1.2.2
+wheel>=0.45.1
+twine>=6.1.0
