--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # Core MCP and async dependencies
-mcp>=1.10.1
-aiohttp>=3.9.0
-aiohttp-cors>=0.7.0
-urllib3>=2.0.0
+mcp==1.12.0
+aiohttp==3.12.14
+aiohttp-cors==0.8.1
+urllib3==2.5.0
 
 # Authentication and security
-pyjwt>=2.8.0
-certifi>=2023.5.7
+pyjwt==2.10.0
+certifi==2023.5.7
 
 # Utilities and data handling
-python-dateutil>=2.8.2
-python-dotenv>=1.0.0
-pydantic>=1.10.0,<3.0.0
-packaging>=21.0
+python-dateutil==2.9.0
+python-dotenv==1.1.1
+pydantic==2.11.7
+packaging==25.0
 
 # System monitoring
-psutil>=5.9.0
+psutil==6.1.1
